--- a/domain.yml
+++ b/domain.yml
@@ -6,7 +6,7 @@ intents:
   - goodbye
   - affirm
   - deny
-  - bot_challenge
+  - ask_whatspossible
 
 entities:
   - number
@@ -18,6 +18,8 @@ slots:
   room_type:
     type: unfeaturized
 
+actions:
+  - action_reset_slot
 
 forms:
   - room_form
@@ -31,6 +33,14 @@ responses:
 
   utter_ask_room_type:
     - text: "What type of room would you like to stay in?"
+      buttons:
+        - title: "Simple"
+          payload: '/type_of_room{"room_type": "Simple"}'
+        - title: "Deluxe"
+          payload: '/type_of_room{"room_type": "Deluxe"}'
+
+  utter_explain_whatspossible:
+    - text: "I can help you book a room, schedule room cleaning and handle FAQs"
 
   utter_happy:
   - text: "That's great!"
@@ -40,9 +50,6 @@ responses:
 
   utter_goodbye:
   - text: "Okay bye!"
-
-  utter_iamabot:
-  - text: "I am a bot, powered by Rasa."
 
 session_config:
   session_expiration_time: 60
