--- a/domain.yml
+++ b/domain.yml
@@ -9,6 +9,15 @@ intents:
   - ask_whatspossible
   - schedule_cleaning
   - cleaning_time
+  - faq_checkin
+  - faq_checkout
+  - faq_cancel_reservation
+  - faq_cancellation_policy
+  - faq_restaurant
+  - faq_restaurant_timings
+  - faq_breakfast
+  - faq_breakfast_timings
+  - faq
 
 entities:
   - number
@@ -22,7 +31,6 @@ slots:
     type: unfeaturized
   time:
     type: unfeaturized
-
 
 actions:
   - action_reset_slot
@@ -57,6 +65,63 @@ responses:
           payload: '/cleaning_time{"time": "in 2 hours"}'
         - title: "Later"
           payload: '/cleaning_time{"time": "Later"}'
+
+  utter_faq:
+    - text: "These are some of the FAQs."
+  utter_faq_options:
+    - text: "You can click on any of the following to know more about them."
+      buttons:
+        - title: "Check-In Timings"
+          payload: '/faq_checkin'
+        - title: "Check-Out Timings"
+          payload: '/faq_checkout'
+
+        - title: "Cancel Reservation"
+          payload: '/faq_cancel_reservation'
+        - title: "Cancellation Policy"
+          payload: '/faq_cancellation_policy'
+
+        - title: "Restaurant Availability"
+          payload: '/faq_restaurant'
+        - title: "Restaurant Timings"
+          payload: '/faq_restaurant_timings'
+
+        - title: "Breakfast Availability"
+          payload: '/faq_breakfast'
+        - title: "Breakfast Timings"
+          payload: '/faq_breakfast_timings'
+
+        - title: "Thank you, Im done."
+          payload: '/goodbye'
+
+
+  utter_checkin_timings:
+    - text: "Check-in time starts at 4 PM.\nMinimum check-in age is 21.\nPlease contact the reception for early check-in requests."
+
+  utter_checkout_timings:
+    - text: "Check-out time is 11 AM.\nPlease contact the reception for late checkout requests."
+
+  utter_cancel_reservation:
+    - text: "To cancel a reservation, select the 'Reservations' link from the homepage.\nOn the Reservations page, under
+              the heading ‘View, Change or Cancel a Reservation,’ enter your confirmation number, and either the last
+              name on the reservation or the last four digits of the credit card used to make the reservation."
+
+  utter_cancellation_policy:
+    - text: "The booking deposit is refundable if the cancellation occurs at least 15 days before arrival.\nFor
+              cancellations made after this limit, a penalty will be imposed based on the cancellation policy."
+
+  utter_restaurant:
+    - text: "Yes, the hotel has a restaurant called the Zephyr Bar. With our menu we strive to reflect the historic art
+              and the spirit of our neighborhood by offering a glimpse into what makes our area unique."
+
+  utter_restaurant_timings:
+    - text: "Our restaurant serves a dazzling 24-hour menu. You can order whenever you want to!"
+
+  utter_breakfast:
+    - text: "The hotel provides its guests with a free made-to-order breakfast each morning."
+
+  utter_breakfast_timings:
+    - text: "Monday through Friday breakfast is 6 am to 9 am. On Saturday and Sunday, we are open from 7 am to 10:30 am."
 
   utter_explain_whatspossible:
     - text: "I can help you book a room, schedule room cleaning and handle some FAQs"
